/*
 * Copyright 2016 Google Inc. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *  http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package com.google.bbq;

option java_package = "com.google.bbq";
option java_outer_classname = "Protobufs";

message BroadcastQuery {
    // required - The BBQ client version.
    ClientVersion version = 1;

    // required - the type of data to be discovered
    string dataType = 2;

    // required - the package name of the requesting app
    string requestingApp = 3;

    // required - a 64-bit random number for this request.
    sfixed64 requestId = 4;

    // required
    sfixed64 responseId = 5;

    bytes queryMessage = 6;
    map<string, bytes> additionalProps = 7;
}

message BroadcastQueryResponse {
    // required
    sfixed64 requestId = 1;
    // required
    sfixed64 responseId = 2;
    bytes responseMessage = 3;

    map<string, bytes> additionalProps = 4;
}

message ClientVersion {
    string version = 1;
}
